--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  appwrite: ^8.2.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.6.1
   flutter_svg: ^1.1.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
